@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.51 2000/03/09 13:12:31 stelian Exp $
+$Id: CHANGES,v 1.52 2000/03/10 10:03:09 stelian Exp $
 
 Changes between versions 0.4b15 and 0.4b16 (released ?????????????)
 ===================================================================
@@ -22,6 +22,9 @@ Changes between versions 0.4b15 and 0.4b16 (released ?????????????)
 	from a text file (in addition of the command line). 
 	Thanks to Dejan Muhamedagic <dejan@quant-x.com> for the 
 	patch.
+
+5.	Added the device name and the current volume number
+	as arguments to the end of tape script (dump -F option).
 
 Changes between versions 0.4b14 and 0.4b15 (released March 2, 2000)
 ===================================================================
